--- a/choices/choice05.html
+++ b/choices/choice05.html
@@ -45,7 +45,7 @@
             <img class="choice-img" src="../img/choice05c.jpeg" alt=""/>
 
             <figcaption class="description">
-                Ottobre... <b>BILANCIAMENTO GOVENATIVO</b>. <br> Animo artistico e sensibile!
+                Ottobre... <b>BILANCIAMENTO GOVERNATIVO</b>. <br> Animo artistico e sensibile!
             </figcaption>
 
         </figure>
